<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Buttons" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="678dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/SbarIBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="208dp"
            android:text="@string/foodItem1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="43dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="358dp" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="318dp"
            android:layout_height="176dp"
            android:layout_marginTop="52dp"
            android:text="@string/loremIpsum"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="@drawable/rounded_corners"
            android:text="Add To Cart"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/itemDescription"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/itemDescription"
            app:layout_constraintVertical_bias="0.905" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:text="-"
            app:layout_constraintBottom_toTopOf="@+id/itemDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.622"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:text="+"
            app:layout_constraintBottom_toTopOf="@+id/itemDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.83"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/quantityDisplay"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginBottom="52dp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/itemDescription"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="@+id/guideline5" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="108dp"
            android:textColor="@color/black"

            android:text="Total:"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="384dp"
            android:clickable="true"
            android:contentDescription="@string/favourites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:srcCompat="@mipmap/friedchicken" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:rippleColor="#CC544C"
        app:srcCompat="@drawable/favourite_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/previous"
        app:backgroundTint="#FFFFFF"
        app:defaultNavHost="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>